--- a/style.css
+++ b/style.css
@@ -399,11 +399,11 @@ body {
 }
 
 #banner3 .banner-box:nth-child(2) {
-    background-image: url(images/banner/nihonkohdenondms.png);
+    background-image: url(images/banner/newsterondms.png);
 }
 
 #banner3 .banner-box:nth-child(3) {
-    background-image: url(images/banner/nihonkohdenondms.png);
+    background-image: url(images/banner/biosystemsondms.png);
 }
 
 #banner3 {
@@ -540,7 +540,7 @@ footer .copyright {
 /* Shop Page */
 
 #page-header {
-    background-image: url(images/banner/b1.jpg);
+    background-image: url(images/banner/b2.png);
     width: 100%;
     height: 40vh;
     background-size: cover;
@@ -639,7 +639,7 @@ footer .copyright {
 /* Blog Page */
 
 #page-header.blog-header {
-    background-image: url(images/banner/b19.jpg);
+    background-image: url(images/banner/b2.png);
 }
 
 #blog {
@@ -709,7 +709,7 @@ footer .copyright {
 /* About Page */
 
 #page-header.about-header {
-    background-image: url(images/about/banner.png);
+    background-image: url(images/banner/b2.png);
 }
 
 #about-head {
@@ -1119,8 +1119,11 @@ footer .copyright {
     }
 
     #sm-banner .banner-box {
-        height: 40vh;
-        margin-bottom: 20px;
+        width: 70%;
+        height: 40vh;     /* Reduce height even more on small screens */
+        padding: 15px;
+        background-position: left;  /* Keep focusing on the left side */
+        background-size: cover;
     }
 
     #banner3 {
